--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>git class</h1>
+    <h1 class="title">git class</h1>
     <h2>test commit message</h2>
+    <h3></h3>
 </body>
 </html>
